# Plouf

./: CONTRIBUTING.md  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: .env.example  Mongo.py  Pools.py  main.py
backend/app/routes/health/: api.py  mongo.py
backend/app/routes/pool/: router.py
backend/app/routes/stats/: router.py
backend/tests/: test_health_api.py  test_health_mongo.py  test_mongo_operations.py  test_pool_api.py  test_pool_logs.py  test_stats.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
frontend/app/: .env.example  config.py  main.py
frontend/app/static/css/: style.css
frontend/app/templates/: footer.html  health.html  health.py  home.html  home.py  navbar.html  pool_details.html  pool_details.py  pools.html  pools.py  update_log.html  update_pool.html
